請直接在 Artifacts 中顯示執行前面的踩地雷遊戲

--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -48,6 +48,7 @@
         <h1>踩地雷遊戲</h1>
         <div id="minesweeper"></div>
         <p id="message"></p>
+        <button onclick="initializeGame()">重新開始</button>
     </div>
 
     <script>
