--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>ChrisTorng AI Tools</h1>
+    <div><a href="Minesweeper/index.html">Minesweeper</a></div>
 </body>
 </html>
