--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>踩地雷遊戲</title>
+    <title>踩地雷遊戲 - 改進版</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,9 +53,9 @@
 </head>
 <body>
     <div id="game-container">
-        <h1>踩地雷遊戲</h1>
+        <h1>踩地雷遊戲 - 改進版</h1>
         <div id="minesweeper"></div>
-        <p id="message">遊戲開始！左鍵點擊揭示格子，右鍵標記地雷。</p>
+        <p id="message">遊戲開始！左鍵點擊揭示格子，右鍵標記地雷。同時按下左右鍵可快速揭示周圍格子。</p>
         <button onclick="initializeGame()">重新開始</button>
     </div>
 
@@ -98,18 +98,22 @@
             for (let row = 0; row < ROWS; row++) {
                 for (let col = 0; col < COLS; col++) {
                     if (!board[row][col].isMine) {
-                        let count = 0;
-                        for (let i = -1; i <= 1; i++) {
-                            for (let j = -1; j <= 1; j++) {
-                                if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
-                                    if (board[row + i][col + j].isMine) count++;
-                                }
-                            }
-                        }
-                        board[row][col].neighborMines = count;
+                        board[row][col].neighborMines = countNeighborMines(row, col);
                     }
                 }
             }
+        }
+
+        function countNeighborMines(row, col) {
+            let count = 0;
+            for (let i = -1; i <= 1; i++) {
+                for (let j = -1; j <= 1; j++) {
+                    if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
+                        if (board[row + i][col + j].isMine) count++;
+                    }
+                }
+            }
+            return count;
         }
 
         function revealCell(row, col) {
@@ -155,7 +159,7 @@
             event.preventDefault();
             if (gameOver) return;
 
-            if (event.button === 0) { // 左鍵點擊
+            if (event.button === 0 && event.buttons === 1) { // 只有左鍵點擊
                 if (board[row][col].isMine) {
                     gameOver = true;
                     revealAllMines();
@@ -167,8 +171,10 @@
                         document.getElementById('message').textContent = '恭喜你贏了！';
                     }
                 }
-            } else if (event.button === 2) { // 右鍵點擊
+            } else if (event.button === 2 && event.buttons === 2) { // 只有右鍵點擊
                 toggleFlag(row, col);
+            } else if (event.buttons === 3) { // 同時按下左右鍵
+                chordAction(row, col);
             }
         }
 
@@ -182,6 +188,41 @@
                 } else {
                     cell.classList.remove('flagged');
                     cell.textContent = '';
+                }
+            }
+        }
+
+        function chordAction(row, col) {
+            if (!board[row][col].isRevealed || board[row][col].neighborMines === 0) return;
+
+            let flagCount = 0;
+            for (let i = -1; i <= 1; i++) {
+                for (let j = -1; j <= 1; j++) {
+                    if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
+                        if (board[row + i][col + j].isFlagged) flagCount++;
+                    }
+                }
+            }
+
+            if (flagCount === board[row][col].neighborMines) {
+                for (let i = -1; i <= 1; i++) {
+                    for (let j = -1; j <= 1; j++) {
+                        if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
+                            if (!board[row + i][col + j].isFlagged) {
+                                revealCell(row + i, col + j);
+                                if (board[row + i][col + j].isMine) {
+                                    gameOver = true;
+                                    revealAllMines();
+                                    document.getElementById('message').textContent = '遊戲結束！你踩到地雷了。';
+                                    return;
+                                }
+                            }
+                        }
+                    }
+                }
+                if (checkWin()) {
+                    gameOver = true;
+                    document.getElementById('message').textContent = '恭喜你贏了！';
                 }
             }
         }
@@ -216,7 +257,7 @@
             }
 
             gameOver = false;
-            document.getElementById('message').textContent = '遊戲開始！左鍵點擊揭示格子，右鍵標記地雷。';
+            document.getElementById('message').textContent = '遊戲開始！左鍵點擊揭示格子，右鍵標記地雷。同時按下左右鍵可快速揭示周圍格子。';
         }
 
         initializeGame();
