出現錯誤。我不需要真的儲存在 localStorage，只要紀錄目前執行時之最佳紀錄即可。 ``` Uncaught Error: Uncaught SecurityError: Failed to read the 'localStorage' property from 'Window': The document is sandboxed and lacks the 'allow-same-origin' flag. ```

--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -91,7 +91,7 @@
         let firstClick = true;
         let timer;
         let startTime;
-        let bestTime = localStorage.getItem('bestTime') || Infinity;
+        let bestTime = Infinity;
 
         function createBoard() {
             board = [];
@@ -294,7 +294,6 @@
             const currentTime = Math.floor((Date.now() - startTime) / 1000);
             if (currentTime < bestTime) {
                 bestTime = currentTime;
-                localStorage.setItem('bestTime', bestTime);
                 document.getElementById('best-time').textContent = `Best Time: ${bestTime}s`;
             }
         }
