--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Minesweeper</title>
+    <title>Improved Minesweeper</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,6 +50,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            width: 200px; /* Fixed width for sidebar */
         }
         button {
             padding: 10px;
@@ -59,6 +60,10 @@
         #timer, #best-time {
             font-size: 18px;
             font-weight: bold;
+        }
+        #message {
+            height: 60px; /* Fixed height for message area */
+            overflow-y: auto; /* Allow scrolling if content exceeds height */
         }
         @keyframes reveal {
             from {transform: scale(0.1); opacity: 0;}
@@ -77,7 +82,7 @@
             <p id="timer">Time: 0s</p>
             <p id="best-time">Best Time: N/A</p>
             <button onclick="initializeGame()">New Game</button>
-            <p id="message">Click to start. Left click to reveal, right click to flag.</p>
+            <p id="message">Click to start. Left click to reveal, right click to flag. Click both buttons to quick reveal.</p>
         </div>
     </div>
 
@@ -202,6 +207,7 @@
                     revealCell(row, col);
                     if (checkWin()) {
                         gameOver = true;
+                        revealAllMines();
                         stopTimer();
                         updateBestTime();
                         document.getElementById('message').textContent = 'Congratulations! You won!';
@@ -259,6 +265,7 @@
                 }
                 if (checkWin()) {
                     gameOver = true;
+                    revealAllMines();
                     stopTimer();
                     updateBestTime();
                     document.getElementById('message').textContent = 'Congratulations! You won!';
@@ -320,7 +327,7 @@
                 }
             }
 
-            document.getElementById('message').textContent = 'Click to start. Left click to reveal, right click to flag.';
+            document.getElementById('message').textContent = 'Click to start. Left click to reveal, right click to flag. Click both buttons to quick reveal.';
         }
 
         initializeGame();
