--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -1,336 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Improved Minesweeper</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        #game-container {
-            display: flex;
-            gap: 20px;
-        }
-        #minesweeper {
-            display: inline-grid;
-            grid-template-columns: repeat(15, 30px);
-            gap: 1px;
-            background-color: #bdbdbd;
-            border: 3px solid #7b7b7b;
-        }
-        .cell {
-            width: 30px;
-            height: 30px;
-            background-color: #c0c0c0;
-            border: 1px solid #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-        .revealed {
-            background-color: #e0e0e0;
-        }
-        .mine {
-            background-color: #ff0000;
-        }
-        .flagged {
-            background-color: #ffd700;
-        }
-        #sidebar {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: 200px; /* Fixed width for sidebar */
-        }
-        button {
-            padding: 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        #timer, #best-time {
-            font-size: 18px;
-            font-weight: bold;
-        }
-        #message {
-            height: 60px; /* Fixed height for message area */
-            overflow-y: auto; /* Allow scrolling if content exceeds height */
-        }
-        @keyframes reveal {
-            from {transform: scale(0.1); opacity: 0;}
-            to {transform: scale(1); opacity: 1;}
-        }
-        .cell.revealed {
-            animation: reveal 0.3s ease-out;
-        }
-    </style>
+    <title>踩地雷</title>
+    <link rel="stylesheet" href="minesweeper.css">
 </head>
 <body>
     <div id="game-container">
-        <div id="minesweeper"></div>
-        <div id="sidebar">
-            <h2>Minesweeper</h2>
-            <p id="timer">Time: 0s</p>
-            <p id="best-time">Best Time: N/A</p>
-            <button onclick="initializeGame()">New Game</button>
-            <p id="message">Click to start. Left click to reveal, right click to flag. Click both buttons to quick reveal.</p>
+        <div id="game-info">
+            <h1>踩地雷</h1>
+            <p id="timer">時間: 0秒</p>
+            <p id="mines-left">剩餘地雷: 0</p>
+            <select id="difficulty">
+                <option value="easy">簡單 (10x10, 10個地雷)</option>
+                <option value="medium">中等 (16x16, 40個地雷)</option>
+                <option value="hard">困難 (30x16, 99個地雷)</option>
+            </select>
+            <select id="theme">
+                <option value="classic">經典主題</option>
+                <option value="night-mode">夜間模式</option>
+                <option value="colorful">彩色主題</option>
+            </select>
+            <button id="restart-button">重新開始</button>
+            <p id="message">遊戲開始！左鍵點擊揭示格子，右鍵標記地雷。同時按下左右鍵可快速揭示周圍格子。</p>
+            <h2>最佳成績</h2>
+            <p id="high-score-easy">簡單: N/A</p>
+            <p id="high-score-medium">中等: N/A</p>
+            <p id="high-score-hard">困難: N/A</p>
+        </div>
+        <div id="minesweeper-container">
+            <div id="minesweeper"></div>
         </div>
     </div>
-
-    <script>
-        const ROWS = 15;
-        const COLS = 15;
-        const MINES = 35;
-
-        let board = [];
-        let gameOver = false;
-        let firstClick = true;
-        let timer;
-        let startTime;
-        let bestTime = Infinity;
-
-        function createBoard() {
-            board = [];
-            for (let i = 0; i < ROWS; i++) {
-                board[i] = [];
-                for (let j = 0; j < COLS; j++) {
-                    board[i][j] = {
-                        isMine: false,
-                        isRevealed: false,
-                        isFlagged: false,
-                        neighborMines: 0
-                    };
-                }
-            }
-        }
-
-        function placeMines(safeRow, safeCol) {
-            let minesPlaced = 0;
-            while (minesPlaced < MINES) {
-                const row = Math.floor(Math.random() * ROWS);
-                const col = Math.floor(Math.random() * COLS);
-                if (!board[row][col].isMine && (row !== safeRow || col !== safeCol)) {
-                    board[row][col].isMine = true;
-                    minesPlaced++;
-                }
-            }
-        }
-
-        function calculateNeighborMines() {
-            for (let row = 0; row < ROWS; row++) {
-                for (let col = 0; col < COLS; col++) {
-                    if (!board[row][col].isMine) {
-                        board[row][col].neighborMines = countNeighborMines(row, col);
-                    }
-                }
-            }
-        }
-
-        function countNeighborMines(row, col) {
-            let count = 0;
-            for (let i = -1; i <= 1; i++) {
-                for (let j = -1; j <= 1; j++) {
-                    if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
-                        if (board[row + i][col + j].isMine) count++;
-                    }
-                }
-            }
-            return count;
-        }
-
-        function revealCell(row, col) {
-            if (row < 0 || row >= ROWS || col < 0 || col >= COLS || board[row][col].isRevealed || board[row][col].isFlagged || gameOver) {
-                return;
-            }
-
-            board[row][col].isRevealed = true;
-            updateCell(row, col);
-
-            if (board[row][col].neighborMines === 0) {
-                for (let i = -1; i <= 1; i++) {
-                    for (let j = -1; j <= 1; j++) {
-                        revealCell(row + i, col + j);
-                    }
-                }
-            }
-        }
-
-        function checkWin() {
-            for (let row = 0; row < ROWS; row++) {
-                for (let col = 0; col < COLS; col++) {
-                    if (!board[row][col].isMine && !board[row][col].isRevealed) {
-                        return false;
-                    }
-                }
-            }
-            return true;
-        }
-
-        function updateCell(row, col) {
-            const cell = document.getElementById(`cell-${row}-${col}`);
-            cell.classList.add('revealed');
-            if (board[row][col].isMine) {
-                cell.classList.add('mine');
-                cell.textContent = '💣';
-            } else if (board[row][col].neighborMines > 0) {
-                cell.textContent = board[row][col].neighborMines;
-            }
-        }
-
-        function handleClick(event, row, col) {
-            event.preventDefault();
-            if (gameOver) return;
-
-            if (firstClick) {
-                startTimer();
-                placeMines(row, col);
-                calculateNeighborMines();
-                firstClick = false;
-            }
-
-            if (event.button === 0 && event.buttons === 1) { // Left click only
-                if (board[row][col].isMine) {
-                    gameOver = true;
-                    revealAllMines();
-                    stopTimer();
-                    document.getElementById('message').textContent = 'Game Over! You hit a mine.';
-                } else {
-                    revealCell(row, col);
-                    if (checkWin()) {
-                        gameOver = true;
-                        revealAllMines();
-                        stopTimer();
-                        updateBestTime();
-                        document.getElementById('message').textContent = 'Congratulations! You won!';
-                    }
-                }
-            } else if (event.button === 2 && event.buttons === 2) { // Right click only
-                toggleFlag(row, col);
-            } else if (event.buttons === 3) { // Both left and right click
-                chordAction(row, col);
-            }
-        }
-
-        function toggleFlag(row, col) {
-            if (!board[row][col].isRevealed) {
-                board[row][col].isFlagged = !board[row][col].isFlagged;
-                const cell = document.getElementById(`cell-${row}-${col}`);
-                if (board[row][col].isFlagged) {
-                    cell.classList.add('flagged');
-                    cell.textContent = '🚩';
-                } else {
-                    cell.classList.remove('flagged');
-                    cell.textContent = '';
-                }
-            }
-        }
-
-        function chordAction(row, col) {
-            if (!board[row][col].isRevealed || board[row][col].neighborMines === 0) return;
-
-            let flagCount = 0;
-            for (let i = -1; i <= 1; i++) {
-                for (let j = -1; j <= 1; j++) {
-                    if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
-                        if (board[row + i][col + j].isFlagged) flagCount++;
-                    }
-                }
-            }
-
-            if (flagCount === board[row][col].neighborMines) {
-                for (let i = -1; i <= 1; i++) {
-                    for (let j = -1; j <= 1; j++) {
-                        if (row + i >= 0 && row + i < ROWS && col + j >= 0 && col + j < COLS) {
-                            if (!board[row + i][col + j].isFlagged) {
-                                revealCell(row + i, col + j);
-                                if (board[row + i][col + j].isMine) {
-                                    gameOver = true;
-                                    revealAllMines();
-                                    stopTimer();
-                                    document.getElementById('message').textContent = 'Game Over! You hit a mine.';
-                                    return;
-                                }
-                            }
-                        }
-                    }
-                }
-                if (checkWin()) {
-                    gameOver = true;
-                    revealAllMines();
-                    stopTimer();
-                    updateBestTime();
-                    document.getElementById('message').textContent = 'Congratulations! You won!';
-                }
-            }
-        }
-
-        function revealAllMines() {
-            for (let row = 0; row < ROWS; row++) {
-                for (let col = 0; col < COLS; col++) {
-                    if (board[row][col].isMine) {
-                        updateCell(row, col);
-                    }
-                }
-            }
-        }
-
-        function startTimer() {
-            startTime = Date.now();
-            timer = setInterval(updateTimer, 1000);
-        }
-
-        function stopTimer() {
-            clearInterval(timer);
-        }
-
-        function updateTimer() {
-            const currentTime = Math.floor((Date.now() - startTime) / 1000);
-            document.getElementById('timer').textContent = `Time: ${currentTime}s`;
-        }
-
-        function updateBestTime() {
-            const currentTime = Math.floor((Date.now() - startTime) / 1000);
-            if (currentTime < bestTime) {
-                bestTime = currentTime;
-                document.getElementById('best-time').textContent = `Best Time: ${bestTime}s`;
-            }
-        }
-
-        function initializeGame() {
-            createBoard();
-            firstClick = true;
-            gameOver = false;
-            stopTimer();
-            document.getElementById('timer').textContent = 'Time: 0s';
-            document.getElementById('best-time').textContent = `Best Time: ${bestTime === Infinity ? 'N/A' : bestTime + 's'}`;
-
-            const container = document.getElementById('minesweeper');
-            container.innerHTML = '';
-
-            for (let row = 0; row < ROWS; row++) {
-                for (let col = 0; col < COLS; col++) {
-                    const cell = document.createElement('div');
-                    cell.id = `cell-${row}-${col}`;
-                    cell.className = 'cell';
-                    cell.addEventListener('mousedown', (event) => handleClick(event, row, col));
-                    cell.addEventListener('contextmenu', (event) => event.preventDefault());
-                    container.appendChild(cell);
-                }
-            }
-
-            document.getElementById('message').textContent = 'Click to start. Left click to reveal, right click to flag. Click both buttons to quick reveal.';
-        }
-
-        initializeGame();
-    </script>
+    <script src="minesweeper.js"></script>
 </body>
 </html>
