feat: Add live demo link and Minesweeper icon to landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tools</title>
 </head>
+
 <body>
     <h1>ChrisTorng AI Tools</h1>
-    <div><a href="Minesweeper/index.html">Minesweeper</a></div>
+    <div>
+
+        <img src="Minesweeper/icon.svg" alt="Minesweeper Icon" style="width:1em;height:1em;">
+        <a href="Minesweeper/index.html">Minesweeper</a>
+    </div>
+
 </body>
+
 </html>
