--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="Minesweeper/icon.svg" alt="Minesweeper Icon" style="width:1em;height:1em;">
         <a href="Minesweeper/index.html">Minesweeper</a>
     </div>
+    <div><a href="ImagesCompare/index.html">ImagesCompare</a></div>
 
 </body>
 
