看到錯誤，有辦法修正嗎? Refused to load the image 'https://images.unsplash.com/photo-1521078553428-97b7d27d1dec?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bG93JTIwcmVzfGVufDB8fDB8fHww' because it violates the following Content Security Policy directive: "img-src 'self' blob: data:".

--- a/ImagesCompare/index.html
+++ b/ImagesCompare/index.html
@@ -115,16 +115,35 @@
             slider.style.left = `${percent}%`;
         });
 
-        function loadImages() {
+        async function loadImages() {
             const lowResUrl = document.getElementById('lowResUrl').value;
             const highResUrl = document.getElementById('highResUrl').value;
             
             if (lowResUrl && highResUrl) {
-                document.querySelector('.overlay img').src = lowResUrl;
-                document.querySelector('.image-compare > img').src = highResUrl;
+                try {
+                    const lowResDataUrl = await fetchImageAsDataUrl(lowResUrl);
+                    const highResDataUrl = await fetchImageAsDataUrl(highResUrl);
+                    
+                    document.querySelector('.overlay img').src = lowResDataUrl;
+                    document.querySelector('.image-compare > img').src = highResDataUrl;
+                } catch (error) {
+                    console.error('Error loading images:', error);
+                    alert('載入圖片時發生錯誤。請確保URL是有效的，並且允許跨源訪問。');
+                }
             } else {
                 alert('請輸入兩個有效的圖片URL');
             }
+        }
+
+        async function fetchImageAsDataUrl(url) {
+            const response = await fetch(url);
+            const blob = await response.blob();
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onloadend = () => resolve(reader.result);
+                reader.onerror = reject;
+                reader.readAsDataURL(blob);
+            });
         }
     </script>
 </body>
